correct buy btn position on mobile devices

--- a/main/_mobilequery.scss
+++ b/main/_mobilequery.scss
@@ -162,7 +162,6 @@ $color:  (
       .btn-sm {
           position: relative;
           float: right;
-          margin: 0;
           left: -10px !important;
           top: 75%;
           right: 0!important;
